fix: removido overflow: hidden

--- a/src/style/tailwind.css
+++ b/src/style/tailwind.css
@@ -4,9 +4,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@600&display=swap');
 
-body {
+/* body {
     overflow: hidden;
-}
+} */
 
 @media (max-height: 740px) {
     .media-md-h {
